# attnax

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: pypi-publish.yml
attnax/: __init__.py  attention.py  blocks.py  cache.py  config.py  embeddings.py  encoder.py  feedforward.py  masking.py  norms.py  paged_cache.py  transformer.py  vision.py
attnax/kernels/: __init__.py  _api.py  attention.py  paged.py  pallas.py  score_mods.py
docs/: .gitignore  Makefile  conf.py  development.md  getting_started.ipynb  index.rst
docs/_static/: style.css
docs/_templates/: layout.html
docs/api/: attention.rst  blocks.rst  cache.rst  config.rst  embeddings.rst  feedforward.rst  kernels.rst  masking.rst  norms.rst  transformer.rst  vision.rst
examples/: minimal_encoder.py
tests/: conftest.py  test_advanced_kernels.py  test_components.py  test_gpu_integration.py  test_kernels.py  test_training.py  test_vision.py
