[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "attnax"
version = "0.2.0"
description = "Composable attention and transformer components for JAX."
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [
    {name = "Glib Tkachenko", email = "gtkachenko7@gmail.com"},
]
keywords = [
    "python",
    "jax",
    "machine learning",
    "transformers",
    "attention",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "jax>=0.10.0",
    "flax>=0.12.7"
]

[project.urls]
homepage = "https://github.com/glibtkachenko/attnax"
repository = "https://github.com/glibtkachenko/attnax"
documentation = "https://attnax.readthedocs.io"

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "optax>=0.2.8"
]
docs = [
    "sphinx>=7.0",
    "sphinx-book-theme>=1.1",
    "sphinx-design>=0.5",
    "myst-nb>=1.1",
    "linkify-it-py>=2.0",
]

[tool.setuptools.packages.find]
include = ["attnax*"]
exclude = ["*_test.py"]

[tool.ruff]
line-length = 80
indent-width = 2

[tool.ruff.format]
indent-style = "space"
quote-style = "double"

[tool.ruff.lint]
select = [
    "F",    # Pyflakes
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
]
ignore = [
    "E731",  # lambda assignments allowed
]
